# bd-lab-1

files/: Users.fl
src/: CMakeLists.txt  Menu.cpp  Menu.h  User.cpp  User.h  Visit.cpp  Visit.h  constants.h  files.cpp  files.h  functions.cpp  functions.h  main.cpp
src/Models/: GarbageCollector.cpp  GarbageCollector.h  IndexTable.cpp  IndexTable.h  User.cpp  User.h  Visit.cpp  Visit.h
